--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<body>
 		<div class =" container">
 			<div class="content" >
-				<p>Sorry, this page has moved, click to button below to be redirected</p>
+				<p>Sorry, this page has moved, click the button below to be redirected</p>
 				<a href="http://ngaini3.bitbucket.org" class="btn btn-info" role="button">Nathan's Website</a>
 			</div>
 		</div>
